tests/baselines/reference/promisesWithConstraints.errors.txt
tests/cases/compiler/promisesWithConstraints.ts(15,1): error TS2322: Type 'Promise<Foo>' is not assignable to type 'Promise<Bar>'.
  Property 'y' is missing in type 'Foo' but required in type 'Bar'.
tests/cases/compiler/promisesWithConstraints.ts(20,1): error TS2322: Type 'CPromise<Foo>' is not assignable to type 'CPromise<Bar>'.
  Type 'Foo' is not assignable to type 'Bar'.


==== tests/cases/compiler/promisesWithConstraints.ts (2 errors) ====
    interface Promise<T> {
        then<U>(cb: (x: T) => Promise<U>): Promise<U>;
    }
    
    interface CPromise<T extends { x: any; }> {
        then<U extends { x: any; }>(cb: (x: T) => Promise<U>): Promise<U>;
    }
    
    interface Foo { x; }
    interface Bar { x; y; }
    
    var a: Promise<Foo>;
    var b: Promise<Bar>;
    a = b; // ok
    b = a; // ok
    ~
!!! error TS2322: Type '{|Promise|0|}<{|Foo|1|}>' is not assignable to type '{|Promise|2|}<{|Bar|3|}>'.
!!! error TS2322:   Property 'y' is missing in type '{|Foo|4|}' but required in type '{|Bar|5|}'.
!!! related TS2728 tests/cases/compiler/promisesWithConstraints.ts:10:20: 'y' is declared here.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:1399:11
!!! annotated symbol 1 tests/cases/compiler/promisesWithConstraints.ts:9:11
!!! annotated symbol 2 /.ts/lib.es5.d.ts:1399:11
!!! annotated symbol 3 tests/cases/compiler/promisesWithConstraints.ts:10:11
!!! annotated symbol 4 tests/cases/compiler/promisesWithConstraints.ts:9:11
!!! annotated symbol 5 tests/cases/compiler/promisesWithConstraints.ts:10:11
    
    var a2: CPromise<Foo>;
    var b2: CPromise<Bar>;
    a2 = b2; // ok
    b2 = a2; // was error
    ~~
!!! error TS2322: Type '{|CPromise|0|}<{|Foo|1|}>' is not assignable to type '{|CPromise|2|}<{|Bar|3|}>'.
!!! error TS2322:   Type '{|Foo|4|}' is not assignable to type '{|Bar|5|}'.
!!! annotated symbol 0 tests/cases/compiler/promisesWithConstraints.ts:5:11
!!! annotated symbol 1 tests/cases/compiler/promisesWithConstraints.ts:9:11
!!! annotated symbol 2 tests/cases/compiler/promisesWithConstraints.ts:5:11
!!! annotated symbol 3 tests/cases/compiler/promisesWithConstraints.ts:10:11
!!! annotated symbol 4 tests/cases/compiler/promisesWithConstraints.ts:9:11
!!! annotated symbol 5 tests/cases/compiler/promisesWithConstraints.ts:10:11
    